--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,4 +16,9 @@
 </div>
 {% endif %}
 
+<footer>
+  <p>&copy; 2024 Michael Power, Powered by Jekyll & AcademicPages, a fork of Minimal Mistakes.</p>
+  <p>Site last updated {{ site.time | date: '%Y-%m-%d' }}</p>
+</footer>
+
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}.</div>
